[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flocs-processing"
version = "0.0.0"
description = ""
requires-python = ">3.9"
dependencies = ["cyclopts", "structlog", "packaging"]

[project.scripts]
flocs-processing = "flocs_processing.flocs_processing:main"

[tool.setuptools]
packages = ["flocs_processing"]
